[tool.poetry]
name = "pra_engine"
version = "0.1.0"
description = "Engine for Performance Regression Analysis system"
authors = ["Rafi Abbel <masterraf21@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
pydash = "5.1.0"
rich = "12.2.0"
scipy = "1.8.0"
uvicorn = "0.15.0"
redis = "^4.2.2"
pydantic = "^1.9.0"
fastapi = "^0.75.2"
aiohttp = "^3.8.1"
APScheduler = "^3.9.1"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
